Add support for POA XML

--- a/tests/fixtures/bib/00288.bib
+++ b/tests/fixtures/bib/00288.bib
@@ -14,5 +14,6 @@
  article_type = {journal},
  pub_date = {2013-04-16},
  url = {https://dx.doi.org/10.7554/eLife.00288},
+ keywords = {Herpes simplex, Mucosal immunity, Mathematical modeling},
  citation = {eLife 2013;2:e00288}
 }
